--- a/src/components/GalleryItem/style.scss
+++ b/src/components/GalleryItem/style.scss
@@ -7,7 +7,17 @@
     height: 100%;
     overflow: hidden;
     position: relative;
-    .gallery-item-imginner {
+
+    clip-path: inset(0% 100% 0% 0%);
+    transition: clip-path 1s cubic-bezier(0.77, 0, 0.175, 1);
+
+    &.reveal{
+      clip-path: inset(0% 0% 0% 0%);
+      .gallery-item-imginner{
+        transform: scale(1);
+      }
+    }
+     .gallery-item-imginner{
       background-size: cover;
       background-position: cover;
       transform-origin: center left;
